--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,5 +1,24 @@
+.c-loader {
+  animation: is-rotating 1s infinite;
+  border: 6px solid #e5e5e5;
+  border-radius: 50%;
+  border-top-color: #141717c1;
+  height: 100px;
+  width: 100px;
+  margin-top: 25px;
+}
+
+
+@keyframes is-rotating {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+
+
 .lista-filmes{
-  width: 800px;
+  max-width: 800px;
   margin: 14px auto;
 }
 
